src/components/collage.css
* {
  box-sizing: border-box;
}

html, body {
    padding: 1em;
}

html {
    margin: auto;
}

body {
    background-color: #f1f2f2;
}


figcaption {
    text-align: center;
    width: 100px;
    padding-top: 3px;
}

img {
    width: 100px;
    height: auto;
    box-shadow: 2px 2px 10px rgba(0,0,0,.4);
    opacity: 0.99;
}

img:hover{
    box-shadow: 0px 0px 10px rgba(0,0,0,.4);
}

p {
    color: #303032;
}

table, caption, tbody, tfoot, thead, tr, th, td {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

caption {
  padding-bottom: 0.5em;
  color: #303032;
  text-align: left;
}

table {
  table-layout: fixed;
  border-collapse: collapse;
  margin: 3em auto;
}

.pad-1 {
  padding: 0.1em;
}
.pad-2 {
  padding: 0.2em;
}
.pad-3 {
  padding: 0.3em;
}
.pad-4 {
  padding: 0.4em;
}
.pad-5 {
  padding: 0.5em;
}

.home {
    vertical-align: middle;
    width: 100%;
}

.search {
    display: block;
    position: absolute;
}

.results {
    margin: auto;
    max-height: 80vh;
    overflow: auto;
}

.collage-container {
    background-color: #f1f2f2;
}

.collage-image {
    display: block;
}

.image {
    cursor: move;
}

